@@ -156,6 +156,7 @@ S3method(fapply,default)
 S3method(percent,default)
 S3method(percent,logical)
 S3method(By,default)
+S3method(By,data.frame)
 S3method(sample,data.frame)
 S3method(sample,data.set)
 S3method(print,bucket)
